<resources>
    <string name="app_name">Personal Pins</string>

    <string name="ad_mob_app_id">ca-app-pub-9609734129045919~5748165218</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="boards">Boards</string>
    <string name="pins">Pins</string>
    <string name="pin_select">Select Pins</string>
    <string name="pin_edit">Edit Pin</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="record_video">Record Video</string>
    <string name="pick_video">Pick Video</string>
    <string name="new_board">CREATE BOARD</string>
    <string name="board_name">Board name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="board_cover">Board Default Cover</string>
    <string name="no_board_pins">No pins for this board yet</string>
    <string name="no_boards">No boards created yet</string>
    <string name="no_pins">No pins created yet</string>
    <string name="pin_photo">Pin Details Photo</string>
    <string name="pin_title">Title: <b>%s</b></string>
    <string name="pin_tags_label">TAGS</string>
    <string name="pin_comments_label">COMMENTS</string>
    <string name="new_tag">CREATE TAG</string>
    <string name="new_comment">CREATE COMMENT</string>
    <string name="tag_name">Tag name</string>
    <string name="tag_text">#<b>%s</b></string>
    <string name="comment_text">Comment Text</string>
    <string name="new_pin">CREATE PIN</string>
    <string name="pin_update">Update Pin</string>
    <string name="video_play_button">Video Play Button</string>
    <string name="pin_name">Pin name</string>
    <string name="enter_pin_title">Please enter a pin title</string>
    <string name="pin_cover">Pin Item Cover</string>
    <string name="add_pins">ADD PINS</string>
    <string name="no_pins_added">No pins added yet</string>
    <string name="pin_added_to_board">Pin added to this board</string>
    <string name="pin_removed_from_board">Pin removed from this board</string>
    <string name="view_comments">View comments</string>
    <string name="add_to_favorites_icon">Add to favorites icon</string>
    <string name="add_comment_icon">Add comment icon</string>
    <string name="add_tag_icon">Add tag icon</string>
    <string name="no_comments">No comments for this pin yet</string>
    <string name="comments">Comments</string>
    <string name="favorites">Favorites</string>
    <string name="pin_added_to_favorites">Pin added to favorites</string>
    <string name="pin_removed_from_favorites">Pin removed from favorites</string>
    <string name="no_favorites">No favorite pins yet</string>
    <string name="no_data">No data yet</string>
    <string name="empty_widget">Empty Widget</string>
    <string name="widget_text">Create widget and add it to the Home Screen</string>
    <string name="pref_widget_key">pref_widget_key</string>
    <string name="pref_title_key">pref_title_key</string>
    <string name="create_widget">Create board widget</string>
    <string name="delete_board">Delete board</string>
    <string name="update_board_cover">Update cover</string>
    <string name="delete_pin_dialog_msg">Delete this pin?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
