<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/boards">

    <fragment
        android:id="@+id/boards"
        android:label="@string/boards"
        android:name="com.ang.acb.personalpins.ui.boards.BoardsFragment"
        tools:layout="@layout/fragment_boards">
        <!-- Navigate from board list to board details (and back/up) -->
        <action
            android:id="@+id/action_board_list_to_board_details"
            app:destination="@id/board_details"
            app:popUpTo="@+id/boards"/>
    </fragment>

    <fragment
        android:id="@+id/board_details"
        android:name="com.ang.acb.personalpins.ui.boards.BoardDetailsFragment"
        tools:layout="@layout/fragment_board_details">
        <!-- Navigate from board details to pin details (and back/up) -->
        <action
            android:id="@+id/action_board_details_to_pin_details"
            app:destination="@id/pin_details"
            app:popUpTo="@+id/board_details"/>
        <!-- Navigate from board details to select pins (and back/up) -->
        <action
            android:id="@+id/action_board_details_to_select_pins"
            app:destination="@id/select_pins"
            app:popUpTo="@+id/board_details"/>
        <argument
            android:name="boardId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="boardTitle"
            app:argType="string"
            android:defaultValue="Your Board" />

    </fragment>

    <fragment
        android:id="@+id/select_pins"
        android:label="@string/pin_select"
        android:name="com.ang.acb.personalpins.ui.pins.SelectPinsFragment"
        tools:layout="@layout/fragment_pin_select">
        <argument
            android:name="boardId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/pin_details"
        android:name="com.ang.acb.personalpins.ui.pins.PinDetailsFragment"
        tools:layout="@layout/fragment_pin_details">
        <!-- Navigate from pin details to comments (and back/up) -->
        <action
            android:id="@+id/action_pin_details_to_comments"
            app:destination="@id/comments"
            app:popUpTo="@+id/pin_details"/>
        <argument
            android:name="pinId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="isPhoto"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/comments"
        android:label="@string/comments"
        android:name="com.ang.acb.personalpins.ui.pins.CommentsFragment"
        tools:layout="@layout/fragment_comments">
        <argument
            android:name="pinId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/pins"
        android:label="@string/pins"
        android:name="com.ang.acb.personalpins.ui.pins.PinsFragment"
        tools:layout="@layout/fragment_pin_list">
        <!-- Navigate from pin list to pin details (and back/up) -->
        <action
            android:id="@+id/action_pin_list_to_pin_details"
            app:destination="@id/pin_details"
            app:popUpTo="@+id/pins"/>
    </fragment>

    <dialog
        android:id="@+id/create_pin_dialog"
        android:name="com.ang.acb.personalpins.ui.pins.CreatePinDialog"
        tools:layout="@layout/fragment_picker_dialog">
        <!-- Navigate from create pin dialog fragment to pin edit fragment -->
        <action
            android:id="@+id/action_create_pin_dialog_to_pin_edit"
            app:destination="@id/pin_edit"
            app:popUpTo="@+id/pins"/>
    </dialog>

    <fragment
        android:id="@+id/pin_edit"
        android:label="@string/pin_edit"
        android:name="com.ang.acb.personalpins.ui.pins.PinEditFragment"
        tools:layout="@layout/fragment_pin_edit">
        <argument
            android:name="pinUriString"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
        <argument
            android:name="isPhoto"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:label="@string/favorites"
        android:name="com.ang.acb.personalpins.ui.pins.FavoritePinsFragment"
        tools:layout="@layout/fragment_favorite_pins">
        <!-- Navigate from favorite pins to pin details(and back/up) -->
        <action
            android:id="@+id/action_favorite_pins_to_pin_details"
            app:destination="@id/pin_details"
            app:popUpTo="@+id/favorites"/>
    </fragment>

</navigation>